	- CHANGED: Rely mostly on luaL_check* functions for arg checking.
	- CHANGED: ModelAnimations are changed to separate ModelAnimation types as in Raylib.
	- ADDED: Userdata objects can be referenced with lightuserdata.
	- ADDED: GC_UNLOAD build time define for enabling/disabling Lua garbage collection for objects.
	Can be checked with IsGCUnloadEnabled
	- ADDED: Shaders management functions.

DETAILED CHANGES:
	- CHANGED: GenImageColor now takes Vector2 as size.
	- REMOVED: GetTextureType and texture type enums.
	- ADDED: GetRenderTextureTexture and GetRenderTextureDepthTexture.
	- REMOVED: UnloadCamera2D and UnloadCamera3D.
	- ADDED: LoadFontEx takes also fontChars.
	- ADDED: LoadTextureFromData.
	- ADDED: LoadRenderTextureFromData.
	- ADDED: IsRenderTextureReady, IsMaterialReady, IsFontReady, IsModelReady, IsShaderReady,
	IsImageReady, IsWaveReady, IsSoundReady and IsMusicReady.
	- ADDED: UnloadBuffer.
	- ADDED: GetMaterialDefault returns lightuserdata reference to default material.
	- REMOVED: Some examples.

------------------------------------------------------------------------
Release:	ReiLua version 0.5.0		Using Raylib 4.5
------------------------------------------------------------------------
KEY CHANGES:
	- CHANGED: All ReiLua global variables and functions are now stored in global RL table
	- CHANGED: All examples are now changed to use new RL table method
	- ADDED: doc_parser creates also ReiLua_API.lua that can be used in projects with Lua Language Server
	- CHANGED: Switched to Raylib vertion 4.5. Removed some functions and added others. Main changes to camera3D
	- REVISED: How Lua argumets are handled. Now uluaGet*Index functions can take stack index(positive only)
	Also using positive stack indexing
	- ADDED: Camera3D Lua lib
	- ADDED: Raygui wrapper lib
	- CHANGED: Can now have multiple Music objects like other Raylib objects instead of just one